# html-build

./: .cldr-processor.pl  .dockerignore  .entity-processor-json.py  .entity-processor.py  .entity-to-dtd.pl  .gitattributes  .gitignore  .gitmodules  .post-process-index-generator.pl  .post-process-partial-backlink-generator.pl  .pre-process-annotate-attributes.pl  .pre-process-index-generator.pl  .pre-process-main.pl  .pre-process-tag-omission.pl  .travis.yml  Cargo.toml  Dockerfile  README  README.md  build.sh  lint.sh  package-lock.json  package.json  search-index.py  search_index.json  search_index.py  site.conf  wattsi2bikeshed.js
.github/workflows/: build.yaml  build.yml  test.yml
ci-build/: Dockerfile  README.md  docker-build.sh  docker-run.sh  inside-container.sh
ci-deploy/: .dockerignore  Dockerfile  README.md  inside-container.sh  outside-container.sh
entities/: README.md  build.sh  entities-dtd.url  entity-processor-json.py  entity-processor.py
mdn/: Makefile  getMNDArticleDetails.py  id-map.json
quotes/: README.md  build.sh  cldr-processor.pl
src/: anchor_permanence.rs  annotate_attributes.rs  bikeshed.rs  boilerplate.rs  dom_utils.rs  interface_index.rs  io_utils.rs  main.rs  parser.rs  rcdom_with_line_numbers.rs  represents.rs  self_link.rs  serializer.rs  tag_omission.rs  variables.rs
