[package]
name = "html-build"
version = "0.0.0"
publish = false
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
html5ever = "0.35.0"
markup5ever_rcdom = "0.35.0"
regex = "1"
delegate = "0.13.4"
url = "2"

[dev-dependencies]
tempfile = "3"
